--- a/client/src/Pages/LandingPage/landingpage.module.css
+++ b/client/src/Pages/LandingPage/landingpage.module.css
@@ -3,7 +3,7 @@
     justify-content: space-around;
     width: 100%;
     height: 100vh;
-    background-color: #f2cb07;
+    background-color: #ffd502;
 }
 
 .container h1 {
