--- a/client/src/Pages/Pokedex/pokedex.module.css
+++ b/client/src/Pages/Pokedex/pokedex.module.css
@@ -1,4 +1,6 @@
-.container {
-    width: 100%;
-    height: 100vh;
+.container { 
+    background: url('../../img/charizard-wallpaper-hd-1920x1080.jpg') center;
+    background-size: cover;
+    padding-top: 1px;
+    padding-bottom: 5px;
 }
