--- a/client/src/Pages/Team/team.module.css
+++ b/client/src/Pages/Team/team.module.css
@@ -1,5 +1,6 @@
 .container {
     width: 100%;
     height: 100vh;
-    margin-top: 150px;
+    margin-top: 125px;
+    background: url("../../img/team-bg.jpg") center no-repeat;
 }
