--- a/client/src/components/Form/form.module.css
+++ b/client/src/components/Form/form.module.css
@@ -3,7 +3,6 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  height: 100vh;
   background-image: url("./fondo.png");
   background-size: cover;
 }
@@ -21,7 +20,7 @@ label {
   justify-content: space-between;
   box-sizing: border-box;
   padding: 30px 25px;
-  background-color: #f2f2f2;
+  background-color: #fffcfc81;
   border-radius: 40px;
   margin-top: 80px;
 }
@@ -147,4 +146,5 @@ form .question input {
   border: none;
   cursor: pointer;
   border-radius: 40px;
+  box-shadow: 0 12px 20px 0 rgba(0,0,0,0.24), 0 21px 50px 0 rgba(0,0,0,0.19);
 }
