--- a/client/src/components/Navbar/navbar.module.css
+++ b/client/src/components/Navbar/navbar.module.css
@@ -1,14 +1,14 @@
 .header {
   position: absolute;
-  height: 80px;
+  height: 72px;
   top: 25px;
   width: 100%;
-  margin-top: -30px;
+  margin-top: -32px;
   padding: 10px 100px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #f2cb07d4;
+  background-color: #f2cb07;
   -webkit-box-shadow: 0px 10px 10px 0px rgba(33, 33, 33, 0.35);
   -moz-box-shadow: 0px 10px 10px 0px rgba(33, 33, 33, 0.35);
   box-shadow: 0px 10px 10px 0px rgba(33, 33, 33, 0.35);
