--- a/client/src/components/Pokemon/pokemon.module.css
+++ b/client/src/components/Pokemon/pokemon.module.css
@@ -2,11 +2,12 @@
   background-image: url("https://p4.wallpaperbetter.com/wallpaper/662/27/756/pokemon-video-games-pixel-art-pixels-wallpaper-preview.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
-  padding-top: 100px;
+  height: 100%;
+  padding-top: 50px;
+  padding-bottom: 10px;
   align-items: center;
   text-align: center;
-  color: white;
+  color: rgb(255, 255, 255);
 }
 
 .container .pokebola {
