--- a/client/src/Pages/Pokedex/pokedex.module.css
+++ b/client/src/Pages/Pokedex/pokedex.module.css
@@ -4,3 +4,14 @@
     padding-top: 1px;
     padding-bottom: 5px;
 }
+
+.container text {
+  font-size: 20px;
+  margin: 5px;
+  padding-top: 2px;
+  background-color: #7e1abcca;
+  box-shadow: 0px 5px 20px -10px #000000;
+  border-style: groove;
+  border-color: #000000;
+  border-radius: 10px;
+}
