--- a/client/src/Pages/Team/team.module.css
+++ b/client/src/Pages/Team/team.module.css
@@ -1,6 +1,10 @@
 .container {
     width: 100%;
     height: 100vh;
-    margin-top: 125px;
-    background: url("../../img/team-bg.jpg") center no-repeat;
+    margin-top: 65px;
+    padding-bottom: 20px;
+    background: url("../../img/team-bg.jpg") center;
+    background-size: cover;
+    padding-top: 25px;
+    padding-bottom: 5px;
 }
