--- a/client/src/Pages/Pokedex/pokedex.module.css
+++ b/client/src/Pages/Pokedex/pokedex.module.css
@@ -3,6 +3,7 @@
     background-size: cover;
     padding-top: 1px;
     padding-bottom: 5px;
+    padding-right: 50px;
 }
 
 .container text {
@@ -14,4 +15,50 @@
   border-style: groove;
   border-color: #000000;
   border-radius: 10px;
+}
+.botones {
+  font-size: 22px;
+  text-align: center;
+  margin-bottom: 10px;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  padding-right: 10px;
+  padding-left: 10px;
+  background-color: #7e1abcca;
+  box-shadow: 0px 5px 20px -10px #000000;
+  border-style: groove;
+  border-color: #000000;
+  border-radius: 12px;
+}
+
+.el {
+  margin-top: -60px;
+  margin-bottom: 10px;
+  padding-left: 500px;
+}
+
+.el button {
+  cursor: pointer;
+}
+
+.ls {
+  list-style:none;
+  display:contents;
+  margin: 0;
+}
+
+.ls_botones {
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 8px;
+  font-size:15px;
+  background-color: #7e1abcca;
+  box-shadow: 0px 5px 20px -10px #000000;
+  text-align: center;
+  border-style: solid;
+  border-radius: 10px;
+  border-color: black;
+  cursor: pointer;
 }
